# SolarWattEnergyManagerAPI

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml  release.yml
LocalSolarWatt/: __init__.py  api_client.py  energy_manager.py  my_reserve.py
SolarWattEnergyManagerAPI/: SolarWatt.py  __init__.py  __main__.py  units.py
TestLocalSolarWatt/: test_EnergyManager.py  test_my_reserve.py
TestSolarWattEnergyManagerApi/: test_EnergyManagerAPI.py  test_SolarWatt.py
Tests/: test_energy_manager.py
local_solar_watt/: __init__.py  api.py  api_client.py  device.py  energy_manager.py  tags.py  units.py
local_solar_watt/base/: __init__.py  base_client.py  base_handler.py
local_solar_watt/clients/: __init__.py  mock_client.py  rest_client.py
local_solar_watt/const/: __init__.py  device.py  name_filter.py  tags_classic.py  tags_flex.py  units.py
local_solar_watt/handlers/: __init__.py  classic.py  flex.py
local_solar_watt/openhab/: __init__.py  ha_entity.py  items.py
solar_watt_energy_manager_api/: EnergyManagerAPI.py  __init__.py  __main__.py
test_solar_watt_energy_manager_api/: test_EnergyManagerAPI.py
tests/: test_energy_manager.py
tests/data/: energy_manager_classic.json  energy_manager_flex.json
