[project]
name = "LocalSolarWatt"
version = "v0.8.1"  # dynamically set from CI environment
description = "python api wrapper for solar watt device api"
readme = "README.md"
license = "MIT"
authors = [{ name = "AlgorithmicEntropy" }]
keywords = ["IOT", "Solar", "Local"]
requires-python = ">=3.13"
dependencies = [
    "requests",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/AlgorithmicEntropy/SolarWattEnergyManagerAPI"
Repository = "https://github.com/AlgorithmicEntropy/SolarWattEnergyManagerAPI"
Download = "https://github.com/AlgorithmicEntropy/SolarWattEnergyManagerAPI/releases/latest"